--- a/feature/data/build.gradle
+++ b/feature/data/build.gradle
@@ -1,26 +1,34 @@
 plugins {
-    alias(libs.plugins.android.application)
+    alias(libs.plugins.android.library)
     alias(libs.plugins.jetbrains.kotlin.android)
     alias(libs.plugins.hilt)
+    alias(libs.plugins.kotlin.serialization)
     alias(libs.plugins.google.ksp)
+    alias(libs.plugins.room)
+}
+
+room {
+    schemaDirectory "$projectDir/schemas"
 }
 
 android {
-    namespace 'aren.kamalyan.mishlohatask'
+    namespace 'aren.kamalyan.data'
     compileSdk 34
 
     defaultConfig {
-        applicationId "aren.kamalyan.mishlohatask"
         minSdk 24
-        targetSdk 34
-        versionCode 1
-        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
+        debug {
+            buildConfigField("String", "API_BASE_URL", "\"https://api.github.com\"")
+        }
         release {
+            buildConfigField("String", "API_BASE_URL", "\"https://api.github.com\"")
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -32,28 +40,25 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
     }
+
     buildFeatures {
-        viewBinding true
+        buildConfig true
     }
 }
 
 dependencies {
-
     implementation project(":feature:domain")
-    implementation project(":feature:data")
-    implementation project(":feature:coreui")
 
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.activity
-    implementation libs.androidx.fragment
-
-    implementation libs.androidx.lifecycle.viewmodel.ktx
-
-    implementation libs.androidx.navigation.fragment
-    implementation libs.androidx.navigation.ui
+    implementation libs.androidx.crypto
+    implementation libs.okhttp.logging
+    implementation libs.retrofit.kotlin.serialization
 
     implementation libs.hilt.android
     ksp libs.hilt.compiler
+
+    implementation libs.androidx.room.runtime
+    ksp libs.androidx.room.compiler
+    implementation libs.androidx.room.ktx
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
