--- a/feature/domain/build.gradle
+++ b/feature/domain/build.gradle
@@ -1,22 +1,20 @@
 plugins {
-    alias(libs.plugins.android.application)
+    alias(libs.plugins.android.library)
     alias(libs.plugins.jetbrains.kotlin.android)
     alias(libs.plugins.hilt)
     alias(libs.plugins.google.ksp)
+    alias(libs.plugins.kotlin.serialization)
 }
 
 android {
-    namespace 'aren.kamalyan.mishlohatask'
+    namespace 'aren.kamalyan.domain'
     compileSdk 34
 
     defaultConfig {
-        applicationId "aren.kamalyan.mishlohatask"
         minSdk 24
-        targetSdk 34
-        versionCode 1
-        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,26 +30,14 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
     }
-    buildFeatures {
-        viewBinding true
-    }
 }
 
 dependencies {
 
-    implementation project(":feature:domain")
-    implementation project(":feature:data")
-    implementation project(":feature:coreui")
+    api libs.androidx.paging
+    api libs.kotlinx.serialization.json
 
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.activity
-    implementation libs.androidx.fragment
-
-    implementation libs.androidx.lifecycle.viewmodel.ktx
-
-    implementation libs.androidx.navigation.fragment
-    implementation libs.androidx.navigation.ui
-
+    api libs.retrofit.core
     implementation libs.hilt.android
     ksp libs.hilt.compiler
 
