--- a/feature/coreui/build.gradle
+++ b/feature/coreui/build.gradle
@@ -27,6 +27,9 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
