feat: implement local database, crud operation for favorite, and favorite screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
@@ -43,6 +44,8 @@ dependencies {
     implementation project(":feature:domain")
     implementation project(":feature:data")
     implementation project(":feature:coreui")
+
+    coreLibraryDesugaring libs.android.desugarJdkLibs
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.activity
