--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ ksp = "1.9.22-1.0.18"
 hilt = "2.51.1"
 room = "2.6.1"
 
+desugarJdkLibs = "2.0.4"
 coreKtx = "1.13.1"
 coreSplashscreen = "1.0.1"
 appcompat = "1.6.1"
@@ -30,6 +31,7 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 
 [libraries]
+android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "desugarJdkLibs" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
