--- a/feature/data/build.gradle
+++ b/feature/data/build.gradle
@@ -25,7 +25,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
-        buildConfigField("String", "GITHUB_TOKEN", properties.getProperty("github.token", ""))
+        buildConfigField("String", "GITHUB_TOKEN", "\"${properties.getProperty("github.token")}\"")
 
     }
 
