--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,10 +14,10 @@ jobs:
 
     steps:
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'adopt'
@@ -33,7 +33,7 @@ jobs:
         run: ./gradlew assembleDebug
 
       - name: Upload APK as artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: app-release
+          name: app-debug
           path: app/build/outputs/apk/debug/app-debug.apk
